--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BiosensorApp</title>
+  <title>Biosensor</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script> 
+  <%= javascript_include_tag :defaults %>
+<script>
+  $(document).ready(function() {
+    $("input#autocomplete").autocomplete({
+    source: [ <% deduped = []
+                  Biosensor.all.each do |b|
+                    deduped<<b.specificity
+                  end
+                  deduped.sort.uniq.each do |b| %>
+                 '<%= b %>', 
+              <% end %>
+             ]
+});
+  });
+  </script>
+
 </head>
 <body>
+    <P><CENTER>
+<form action="/biosensors" method=GET name="search_form">
+  <input type="hidden" name="last_sort"  value="<%= @last_sort %>" />
+  <input type="hidden" name="last_sort_direction"  value="<%= @last_sort_direction %>" />
+    <TABLE  BORDER = "0"
+           CELLSPACING = "0" CELLPADDING = "2">
+
+    <TR>
+    <TD VALIGN = "BOTTOM" ALIGN = "LEFT">
+    <A HREF=""><IMG SRC = "/images/logo.png"
+         WIDTH = "584"
+         HEIGHT = "104"
+         BORDER = "0" ALT = "Biosensors"></A></TD>
+    <TD VALIGN = "TOP" ALIGN = "LEFT">
+      <A HREF = "_blank" TARGET=_blank>Login</A><br>
+      <A HREF = "_blank" TARGET=_blank>Help</A></TD>
+    </TR>
+    <TR>
+      <TD COLSPAN=2>
+
+
+<TABLE WIDTH=100% CELLPADDING=4 CELLSPACING=0 BORDER=0 align=center style="border: solid; border-width: 1px; border-color: #C0C0C0;">
+<tr>
+<td align=center valign=middle class=shade>
+<b>Search by biosensor specificity: </b> 
+</td>
+<td  align=center valign=middle class=shade >
+<input type=text size=20 id="autocomplete" name="autocomplete1">
+</td><td  align=center valign=middle class=shade >
+<input type=submit class="button" value="Search"
+>
+<input type=button onclick="search_form.autocomplete1.value='all'; search_form.submit();" class=button value="Show all" 
+> 	
+</td  align=center valign=middle class=shade >
+<!-- how many records found-->
+<td align=center class=shade rowspan="3" style=
+ "border: solid 0 white; border-left-width:2px; padding-left:0.5ex">
+<%= @row_count %> records found for query: <br>
+specificity = &quot;<%= @autocomplete1 %>&quot;
+<% if ! @autocomplete2.blank? %> 
+  OR &quot;<%= @autocomplete2 %>&quot; 
+<% end %>
+<% if ! @autocomplete3.blank? %> 
+  OR &quot;<%= @autocomplete3 %>&quot; 
+<% end %>
+</td>
+<!--Records per page
+<td align=center class=shade rowspan="3" style=
+   "border: solid 0 white; border-left-width:2px; padding-left:0.5ex">
+Records Per Page:<br>
+<select 
+onChange="javascript: _blank;">
+<option value="10" >10</option>
+<option value="20" selected>20</option>
+<option value="30" >30</option>
+<option value="50" >50</option>
+<option value="100" >100</option>
+<option value="500" >500</option>
+</select>
+</td>-->
+</tr>
+<tr>
+<td align=right valign=middle class=shade>OR</td>
+<td  align=center valign=middle class=shade >
+<input type=text size=20 id="autocomplete" name="autocomplete2">
+</td>
+<td  align=center valign=middle class=shade >
+</td>
+</tr><tr>
+<td align=right valign=middle class=shade>OR</td>
+<td  align=center valign=middle class=shade >
+<input type=text size=20 id="autocomplete" name="autocomplete3">
+</td>
+<td  align=center valign=middle class=shade >
+</td>
+</tr>
+</table></td></tr></table></td></tr></table>
+</form>
 
 <%= yield %>
 
