--- a/app/views/biosensors/index.html.erb
+++ b/app/views/biosensors/index.html.erb
@@ -3,14 +3,32 @@
 <% end %>
 <table align="center" width="95%" border="0" cellpadding=3 cellspacing=2 style="border: solid; border-width: 1px; border-color: #C0C0C0;">
   <tr class="blackshade" valign="top" >
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=specificity&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>" >Specificity</a></th><td><%= @sort_by_state[:specificity].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=sensor_name&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Name</a></th><td><%= @sort_by_state[:sensor_name].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=sensor_type&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Type</a></th><td><%= @sort_by_state[:sensor_type].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=anal_tech&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Analysis technique</a></th><td><%= @sort_by_state[:anal_tech].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=iv_props&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">In vitro properties</a></th><td><%= @sort_by_state[:iv_props].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=organism&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Organism of in vivo analysis</a></th><td><%= @sort_by_state[:organism].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=fluorophore&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Fluorophore</a></th><td><%= @sort_by_state[:fluorophore].html_safe %></td></tr></table></th>
-    <th align="center" ><table><tr><th><a href="/biosensors?sort_by=pi_name&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">PI</a></th><td><%= @sort_by_state[:pi_name].html_safe %></td></tr></table></th>
+    <th align="center" >
+    <table><tr><th>
+      <a href="/biosensors?sort_by=specificity&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>" >Specificity</a>
+      </th><td><%= @sort_by_state[:specificity].html_safe %></td></tr>
+    </table></th>
+    <th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=sensor_name&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Name</a></th><td><%= @sort_by_state[:sensor_name].html_safe %></td></tr>
+</table></th>
+    <th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=sensor_type&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Type</a></th><td><%= @sort_by_state[:sensor_type].html_safe %></td></tr>
+</table></th>
+    <th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=anal_tech&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Analysis technique</a></th><td><%= @sort_by_state[:anal_tech].html_safe %></td></tr>
+</table></th>
+    <!--<th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=iv_props&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">In vitro properties</a></th><td><%= @sort_by_state[:iv_props].html_safe %></td></tr>
+</table></th>-->
+    <th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=organism&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Cell type of in vivo analysis</a></th><td><%= @sort_by_state[:organism].html_safe %></td></tr>
+</table></th>
+    <th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=fluorophore&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">Fluorophore</a></th><td><%= @sort_by_state[:fluorophore].html_safe %></td></tr>
+</table></th>
+    <th align="center" >
+    <table><tr><th><a href="/biosensors?sort_by=pi_name&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>">PI</a></th><td><%= @sort_by_state[:pi_name].html_safe %></td></tr>
+</table></th>
   <% if session[:user_id] %>
     <th></th>
     <th></th>
@@ -24,7 +42,7 @@
     <td><%= biosensor.sensor_name_htm.html_safe %></td>
     <td><%= biosensor.sensor_type %></td>
     <td><%= biosensor.anal_tech %></td>
-    <td><%= biosensor.iv_props %></td>
+    <!--<td><%= biosensor.iv_props %></td>-->
     <td><%= biosensor.organism %></td>
     <td><%= biosensor.fluorophore %></td>
     <td><a href="http://www.ncbi.nlm.nih.gov/pubmed/<%= biosensor.pub_med_id %>" ><%= biosensor.pi_name %></a></td>
