--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -12,9 +12,13 @@ pre {
   font-size: 11px;
 }
 
-a { color: #000; }
-a:visited { color: #000; }
+a { color: black; }
+a:visited { color: black }
 a:hover { color: #666; }
+
+a.refnum:link { color: blue; }
+a.refnum:visited { color: blue; }
+a.refnum:hover { color: blueviolet; }
 
 div.field, div.actions {
   margin-bottom: 10px;
