Enabled In vitro properties column and synced form labels with table columns

--- a/app/views/biosensors/_form.html.erb
+++ b/app/views/biosensors/_form.html.erb
@@ -12,47 +12,47 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :specificity %><br />
+    <%= f.label :specificity, "Specificity" %><br/>
     <%= f.text_field :specificity %>
   </div>
   <div class="field">
-    <%= f.label :specificity_htm %><br />
+    <%= f.label :specificity_htm, "Specificity HTML" %><br/>
     <%= f.text_field :specificity_htm %>
   </div>
   <div class="field">
-    <%= f.label :sensor_name %><br />
+    <%= f.label :sensor_name, "Name" %><br/>
     <%= f.text_field :sensor_name %>
   </div>
   <div class="field">
-    <%= f.label :sensor_name_htm %><br />
+    <%= f.label :sensor_name_htm, "Name HTML" %><br/>
     <%= f.text_field :sensor_name_htm %>
   </div>
   <div class="field">
-    <%= f.label :sensor_type %><br />
+    <%= f.label :sensor_type, "Type" %><br/>
     <%= f.text_field :sensor_type %>
   </div>
   <div class="field">
-    <%= f.label :anal_tech %><br />
+    <%= f.label :anal_tech, "Analysis technique" %><br/>
     <%= f.text_field :anal_tech %>
   </div>
   <div class="field">
-    <%= f.label :iv_props %><br />
+    <%= f.label "In vitro properties" %><br/>
     <%= f.text_field :iv_props %>
   </div>
   <div class="field">
-    <%= f.label :organism %><br />
+    <%= f.label :organism, "Cell type of in vivo analysis" %><br/>
     <%= f.text_field :organism %>
   </div>
   <div class="field">
-    <%= f.label :fluorophore %><br />
+    <%= f.label :fluorophore,"Fluorophore" %><br/>
     <%= f.text_field :fluorophore %>
   </div>
   <div class="field">
-    <%= f.label :pub_med_id %><br />
+    <%= f.label :pub_med_id, 'PubMed ID' %><br />
     <%= f.text_field :pub_med_id %>
   </div>
   <div class="field">
-    <%= f.label :pi_name %><br />
+    <%= f.label :pi_name,"PI" %><br />
     <%= f.text_field :pi_name %>
   </div>
   <div class="actions">
