--- a/app/views/biosensors/show.html.erb
+++ b/app/views/biosensors/show.html.erb
@@ -6,37 +6,37 @@
 </p>
 
 <p>
-  <b>Specificity htm:</b>
-  <%= @biosensor.specificity_htm %>
+  <b>Specificity HTML:</b>
+  <%= @biosensor.specificity_htm.html_safe %>
 </p>
 
 <p>
-  <b>Sensor name:</b>
+  <b>Name:</b>
   <%= @biosensor.sensor_name %>
 </p>
 
 <p>
-  <b>Sensor name htm:</b>
-  <%= @biosensor.sensor_name_htm %>
+  <b>Name HTML:</b>
+  <%= @biosensor.sensor_name_htm.html_safe %>
 </p>
 
 <p>
-  <b>Sensor type:</b>
+  <b>Type:</b>
   <%= @biosensor.sensor_type %>
 </p>
 
 <p>
-  <b>Anal tech:</b>
+  <b>Analysis technique:</b>
   <%= @biosensor.anal_tech %>
 </p>
 
 <p>
-  <b>In vitro props:</b>
+  <b>In vitro properties:</b>
   <%= @biosensor.iv_props %>
 </p>
 
 <p>
-  <b>Organism:</b>
+  <b>Cell type of in vivo analysis:</b>
   <%= @biosensor.organism %>
 </p>
 
@@ -46,12 +46,12 @@
 </p>
 
 <p>
-  <b>Pub med:</b>
+  <b>PubMed ID:</b>
   <%= @biosensor.pub_med_id %>
 </p>
 
 <p>
-  <b>Pi name:</b>
+  <b>PI:</b>
   <%= @biosensor.pi_name %>
 </p>
 
