--- a/app/views/biosensors/index.html.erb
+++ b/app/views/biosensors/index.html.erb
@@ -31,7 +31,9 @@
 </table></th>
   <% if session[:user_id] %>
     <th></th>
-    <th></th>
+    <% if session[:user_id].administrator? %>
+      <th></th>
+    <% end %>
   <% end %>
   </tr>
 <% shade = 0 
@@ -49,7 +51,9 @@
   <% if session[:user_id] %>
     <td><%= link_to 'Edit', edit_biosensor_path(biosensor) %></td>
     <!--<td><%= link_to 'Destroy', biosensor, :confirm => 'Are you sure?', :method => :delete %></td>-->
-    <td><a href="/biosensors/<%= biosensor.id %>/destroy" onClick="return confirm('Are you sure?');" >Destroy</a></td>
+    <% if session[:user_id].administrator? %>
+      <td><a href="/biosensors/<%= biosensor.id %>/destroy" onClick="return confirm('Are you sure?');" >Destroy</a></td>
+    <% end %>
   <% end %>
   </tr>
   <% shade += 1
