--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,6 +29,11 @@
     <%= f.password_field :password_confirmation, :size => 40 %>
   </div>
 
+  <div class="field">
+    <%= f.label :administrator, 'Adminiatrator' %><br />
+    <%= f.text_field :administrator, :size => 40 %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
