--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,15 +6,9 @@
 </p>
 
 <p>
-  <b>Hashed password:</b>
-  <%= @user.hashed_password %>
+  <b>Admin:</b>
+  <%= @user.administrator%>
 </p>
-
-<p>
-  <b>Salt:</b>
-  <%= @user.salt %>
-</p>
-
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
