New data and sensor_target_type column

--- a/app/views/biosensors/_form.html.erb
+++ b/app/views/biosensors/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :sensor_target_type, "Target Type" %><br/>
+    <%= f.text_field :sensor_target_type %>
+  </div>
+  <div class="field">
     <%= f.label :specificity, "Specificity" %><br/>
     <%= f.text_field :specificity %>
   </div>
