--- a/app/views/biosensors/index.html.erb
+++ b/app/views/biosensors/index.html.erb
@@ -5,6 +5,11 @@
   <tr class="blackshade" valign="top" >
     <th align="center" >
     <table><tr><th>
+      <a href="/biosensors?sort_by=sensor_target_type&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>" >Target Type</a>
+      </th><td><%= @sort_by_state[:sensor_target_type].html_safe %></td></tr>
+    </table></th>
+    <th align="center" >
+    <table><tr><th>
       <a href="/biosensors?sort_by=specificity&last_sort_direction=<%= @last_sort_direction %>&last_sort=<%= @last_sort %>&autocomplete1=<%= @autocomplete1 %>&autocomplete2=<%= @autocomplete2 %>&autocomplete3=<%= @autocomplete3 %>" >Specificity</a>
       </th><td><%= @sort_by_state[:specificity].html_safe %></td></tr>
     </table></th>
@@ -40,6 +45,7 @@
    att = 'class="shade"'
  @biosensors.each do |biosensor| %>
   <tr valign="top" <%= shade.odd?? att.html_safe : "" %> >
+    <td><%= biosensor.sensor_target_type.html_safe %></td>
     <td><%= biosensor.specificity_htm.html_safe %></td>
     <td><%= biosensor.sensor_name_htm.html_safe %></td>
     <td><%= biosensor.sensor_type %></td>
