--- a/app/views/biosensors/show.html.erb
+++ b/app/views/biosensors/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Target type:</b>
+  <%= @biosensor.sensor_target_type %>
+</p>
+
+<p>
   <b>Specificity:</b>
   <%= @biosensor.specificity %>
 </p>
